:sparkles: add abstract table model